--- a/yore_v1/Views/Posts/Index.cshtml
+++ b/yore_v1/Views/Posts/Index.cshtml
@@ -23,6 +23,12 @@
         <th>
             @Html.DisplayNameFor(model => model.Likes)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Title)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Content)
+        </th>
         <th></th>
     </tr>
 
@@ -39,6 +45,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Likes)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Title)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Content)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.PostID }) |
