--- a/yore_v1/Content/bootstrap.css
+++ b/yore_v1/Content/bootstrap.css
@@ -1583,8 +1583,8 @@ pre code {
 .container {
   padding-right: 15px;
   padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 0;
+  margin-left: 0;
 }
 @media (min-width: 768px) {
   .container {
