--- a/yore_v1/Views/User/Login.cshtml
+++ b/yore_v1/Views/User/Login.cshtml
@@ -4,36 +4,43 @@
     ViewBag.Title = "Login";
 }
 
-@using (Html.BeginForm("Login", "User", FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
-    <div class="menu">
-        <div class="login">
-            <center><img src="https://i.ibb.co/GMLNc55/yore-logo.png" border="0" width="50px"></center>
+    <div class="row">
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
 
-            <h1>Log In</h1>
-            <div class="input name">
-                <label>Username</label>
-                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "text", @type = "text", @tabindex = "1" } })
-                <div class="bar"></div>
-                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
-            </div>
+            @using (Html.BeginForm("Login", "User", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <div class="menu" style="width: 313px;">
+                    <div class="login">
+                        <center><img src="https://i.ibb.co/GMLNc55/yore-logo.png" border="0" width="50px"></center>
 
-            <div class="input name">
-                <label>Password</label>
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "text", @type = "text", @tabindex = "2" } })
-                <div class="bar"></div>
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                <i class="fa fa-eye" aria-hidden="true"></i>
-            </div>
-            <button type="submit" value="Submit" tabindex="3" class="submit" disabled="disabled" title="Log In">GO</button>
-            <center><a href="">Don't have an account yet? Sign up now!</a></center>
+                        <h1>Sign In</h1>
+                        <div class="input name">
+                            @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @placeholder= "Username", @class = "text", @type = "text", @tabindex = "1" } })
+                            <div class="bar"></div>
+                            @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="input name">
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @placeholder= "Password", @class = "text", @type = "password", @tabindex = "2" } })
+                            <div class="bar"></div>
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                            <i class="fa fa-eye" aria-hidden="true"></i>
+                        </div>
+                        <button type="submit" value="Submit" tabindex="3" class="submit" disabled="disabled" title="Log In">Sign In</button>
+                        <center><a href="">Don't have an account yet? Sign up now!</a></center>
+                    </div>
+                </div>
+
+                <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
+            }
+        </div>
+        <div class="col-sm-4">
         </div>
     </div>
 
-    <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
