--- a/yore_v1/Views/User/Login.cshtml
+++ b/yore_v1/Views/User/Login.cshtml
@@ -18,19 +18,19 @@
 
                         <h1>Sign In</h1>
                         <div class="input name">
-                            @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @placeholder= "Username", @class = "text", @type = "text", @tabindex = "1" } })
+                            @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @placeholder = "Username", @class = "text", @type = "text", @tabindex = "1" } })
                             <div class="bar"></div>
                             @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="input name">
-                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @placeholder= "Password", @class = "text", @type = "password", @tabindex = "2" } })
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @placeholder = "Password", @class = "text", @type = "password", @tabindex = "2" } })
                             <div class="bar"></div>
                             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                             <i class="fa fa-eye" aria-hidden="true"></i>
                         </div>
                         <button type="submit" value="Submit" tabindex="3" class="submit" disabled="disabled" title="Log In">Sign In</button>
-                        <center><a href="">Don't have an account yet? Sign up now!</a></center>
+                        <center><a href="@Url.Action("Register", "User")">Don't have an account yet? Sign up now!</a></center>
                     </div>
                 </div>
 
@@ -41,6 +41,6 @@
         </div>
     </div>
 
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
