--- a/yore_v1/Views/Posts/Details.cshtml
+++ b/yore_v1/Views/Posts/Details.cshtml
@@ -62,5 +62,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.PostID }) |
+    @Html.ActionLink("Delete", "Delete", new { id = Model.PostID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
