--- a/yore_v1/Views/Posts/Edit.cshtml
+++ b/yore_v1/Views/Posts/Edit.cshtml
@@ -4,13 +4,29 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<div class="row">
+    <div class="col-sm-1">
+        <img src="https://i.ibb.co/GMLNc55/yore-logo.png" border="0" width="50px">
+    </div>
+    <div class="col-sm-7">
+        <h2 style="margin-top: 9px; margin-left: -25px;">Health and Travel</h2>
+    </div>
+    <div class="col-sm-2">
+        <a href="@Url.Action("Create", "Posts")" class="btn btn-success">Create new Post</a>
+    </div>
+    <div class="col-sm-2">
+        <a href="@Url.Action("Logout", "User")" class="btn btn-danger">Logout</a>
+    </div>
+</div>
+<br />
+
+<h2>Edit the Post</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Post</h4>
         <hr />
